--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div>
 
         <p id="result"></p>
-        <button onclick="calc()"> calular</button>
+        <button onclick="calc()"> calcular</button>
     </div>
 </body>
 <script src="corteTempo.js">
