--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <section id="fim">
-        <p>Corte de Liga por Tempo das Torres</p>
+        <p>Corte de Liga por Tempo das Torres</p><br>
 <select name="dia" id="diaOut">
 	    <option value="0">Dia do Mês</option>
             <option value="1">01</option>
