--- a/cortePadrao.html
+++ b/cortePadrao.html
@@ -156,7 +156,7 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td> <input type="text" id="valor_torrado" value="14000"></td>
+				<td> <input type="text" id="valor_torrado" value=""></td>
 				<td> <input type="text" value="49" id="renTor"></td>
 				<td id="result_torrado"><input type="text"></td>
 			</tr>
@@ -166,7 +166,7 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td><input type="text" id="valor_diluido" value="75000"></td>
+				<td><input type="text" id="valor_diluido" value=""></td>
 				<td> <input type="text" value="10" id="brix_diluido"></td>
 				<td id="result_diluido"><input type="text"></td>
 			</tr>
@@ -177,7 +177,7 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td><input type="text" id="valor_concentrado" value="40000"></td>
+				<td><input type="text" id="valor_concentrado" value=""></td>
 				<td> <input type="text" value="50" id="brix_concentrado"></td>
 				<td id="result_concentrado"><input type="text"></td>
 			</tr>
@@ -187,8 +187,8 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td><input type="text" id="valor_Emb0" value="300"></td>
-				<td> <input type="text" value="30" id="pesoEmb0"></td>
+				<td><input type="text" id="valor_Emb0" value=""></td>
+				<td> <input type="text" value="" id="pesoEmb0"></td>
 				<td id="result_torre1"><input type="text"></td>
 			</tr>
 			<tr>
@@ -197,8 +197,8 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td><input type="text" id="valor_Emb1" value="300"></td>
-				<td> <input type="text" value="30" id="pesoEmb1"></td>
+				<td><input type="text" id="valor_Emb1" value=""></td>
+				<td> <input type="text" value="" id="pesoEmb1"></td>
 				<td  id="result_torre2"><input type="text"></td>
 			</tr>
 			<tr>
