--- a/cortePadrao.html
+++ b/cortePadrao.html
@@ -150,9 +150,9 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td> <input type="text" id="valor_torrado" value=""></td>
-				<td> <input type="text" value="48" id="renTor"></td>
-				<td ><input type="text" id="result_torrado"></td>
+				<td> <input type="number" id="valor_torrado" value=""></td>
+				<td> <input type="number" value="48" id="renTor"></td>
+				<td ><input type="number" id="result_torrado"></td>
 			</tr>
 			<tr>
 				<td>Diluido</td>
@@ -160,9 +160,9 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td><input type="text" id="valor_diluido" value=""></td>
-				<td> <input type="text" value="10" id="brix_diluido"></td>
-				<td ><input type="text" id="result_diluido"></td>
+				<td><input type="number" id="valor_diluido" value=""></td>
+				<td> <input type="number" value="10" id="brix_diluido"></td>
+				<td ><input type="number" id="result_diluido"></td>
 			</tr>
 
 			<tr>
@@ -171,9 +171,9 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td><input type="text" id="valor_concentrado" value=""></td>
-				<td> <input type="text" value="50" id="brix_concentrado"></td>
-				<td ><input type="text" id="result_concentrado"></td>
+				<td><input type="number" id="valor_concentrado" value=""></td>
+				<td> <input type="number" value="50" id="brix_concentrado"></td>
+				<td ><input type="number" id="result_concentrado"></td>
 			</tr>
 			<tr>
 				<td>Torre 1 NºEmb</td>
@@ -181,9 +181,9 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td><input type="text" id="valor_Emb0" value=""></td>
-				<td> <input type="text" value="" id="pesoEmb0"></td>
-				<td ><input type="text" id="result_torre1"></td>
+				<td><input type="number" id="valor_Emb0" value=""></td>
+				<td> <input type="number" value="" id="pesoEmb0"></td>
+				<td ><input type="number" id="result_torre1"></td>
 			</tr>
 			<tr>
 				<td>Torre 2 NºEmb</td>
@@ -191,9 +191,9 @@
 				<td></td>
 			</tr>
 			<tr>
-				<td><input type="text" id="valor_Emb1" value=""></td>
-				<td> <input type="text" value="" id="pesoEmb1"></td>
-				<td  ><input type="text" id="result_torre2"></td>
+				<td><input type="number" id="valor_Emb1" value=""></td>
+				<td> <input type="number" value="" id="pesoEmb1"></td>
+				<td  ><input type="number" id="result_torre2"></td>
 			</tr>
 			<tr>
 				
